syntax = "proto3";



package helloworld;

// The greeting service definition.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

  rpc SayHelloMany (HelloRequestMany) returns (HelloReplyMany) {}

  rpc SayHelloStreamReply (HelloRequestMany) returns (stream HelloReply) {}

  rpc StreamSayHelloReply (stream HelloRequest) returns (HelloReplyMany) {}
  
  rpc StreamSayHelloStreamReply (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}


message HelloRequestMany {
    repeated HelloRequest names = 1;
}


// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message HelloReplyMany {
  repeated HelloReply messages = 1;
}